# rag-eval

./: .gitignore  Makefile  README.md  cli.py  pyproject.toml
configs/: default.yaml
data/golden/: golden_qa.json
data/raw/: accounts_payable_controls.md  accounts_receivable.md  payment_terms_and_collections.md  working_capital_finance.md
docs/: architecture.md
finetune/: README.md  __init__.py  evaluate.py  generate_data.py  push_to_hub.py  train.py
rageval/: __init__.py  config.py  eval.py  ingest.py  pipeline.py  retriever.py
rageval/architecture/: base.py
tests/: test_pipeline.py
